log
Thu Apr 21 15:22:24 -04 2022: 
 treemap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
test.c:506:9: error: variable 'all_correct' set but not used [-Werror,-Wunused-but-set-variable]
    int all_correct=1;
        ^
1 error generated.
Compilation failed
0af1922
Thu Apr 21 15:25:48 -04 2022: 
 tests:  4|7
total_score: 5/70
4b523d7
Thu Apr 21 15:39:21 -04 2022: 
 treemap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
4f6e8df
Thu Apr 21 15:43:30 -04 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2511e08
Thu Apr 21 15:43:55 -04 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
502870a
Thu Apr 21 15:45:06 -04 2022: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
6105fc9
Thu Apr 21 15:51:07 -04 2022: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
289c5f0
Thu Apr 21 16:06:13 -04 2022: 
 treemap.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
 tests:  0|0
df82151
Thu Apr 21 16:06:47 -04 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
b376e8d
Thu Apr 21 16:12:52 -04 2022: 
 treemap.c | 19 ++++++++++++-------
 1 file changed, 12 insertions(+), 7 deletions(-)
 tests:  0|0
35b4440
